<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="settings_name">Mensa Settings</string>
    <string name="app_name">Mensen - TU/HS Darmstadt</string>
    <string name="no_meals">No data for todays menu available.</string>
    <string name="dialog_updating_text">Updating Database.</string>
    <string name="pref_cat_mensa">Mensa</string>
    <string name="pref_MensaLocationSummary">Menu of selected location will be shown.</string>
    <string name="pref_MensaLocationLabel">Mensa location</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_update">Update</string>
    <string name="pref_AutoUpdateLabel">Auto update</string>
    <string name="pref_AutoUpdateDescr">Updates meals automatically.</string>
    <string name="pref_DeleteOldDataDescr">Deletes meals from last week and before.</string>
    <string name="pref_DeleteOldDataLabel">Delete old menu entries</string>
    <string name="pref_ThemesLabel">Select theme</string>
    <string name="pref_ThemesSummary">Select a theme.</string>
    <string name="PREF_KEY_DELETE_OLD_DATA">del_old_data</string>
    <string name="PREF_KEY_MENSA_LOCATION">mensa_location</string>
    <string name="PREF_KEY_THEMES">themes</string>
    <string name="PREF_KEY_AUTO_UPDATE">auto_update</string>
    <string name="pref_DeleteOldDataDescrOff">Keeps all meals in Database.</string>
    <string name="pref_AutoUpdateDescrOff">Only manual updates.</string>
    <string name="menu_today">Today</string>
    <string name="pref_cat_app">Application</string>
    <string name="PREF_KEY_GESTURES">gestures</string>
    <string name="pref_GesturesDescr">Swipe and double tap activated.</string>
    <string name="pref_GesturesDescrOff">Gestures disabled.</string>
    <string name="pref_GesturesLabel">Enable gestures</string>
    <string name="pref_cat_ad">Ad\'s</string>
    <string name="pref_AdsDescr">Ad\'s are shown to support developer of this app (me ;) ). Thanks!</string>
    <string name="pref_AdsDescrOff">No support for developer.</string>
    <string name="PREF_KEY_ADS">ads</string>
    <string name="pref_AdsLabel">Support developer</string>
    <string name="pref_LastUpdateLabel">Last Update</string>
    <string name="PREF_KEY_LAST_UPDATE">last_update</string>
    <string name="pref_EnableVotingDescrOff">EXPERIMENTAL. Voting is off.</string>
    <string name="pref_EnableVotingDescr">EXPERIMENTAL. Shows and enables to vote.</string>
    <string name="PREF_KEY_ENABLE_VOTING">enable_voting</string>
    <string name="pref_EnableVotingLabel">Enable voting</string>
    <string name="share_checkout">Checkout "%1$s" on %2$s at "%3$s"</string>
    <string name="dialog_title_voting">Rate your Meal</string>
    <string name="share_subject">Mensa meal on %s</string>
    <string name="share_where_to">Where to share?</string>
    <string name="type_poultry">poultry</string>
    <string name="type_calf">calf</string>
    <string name="type_pig">pig</string>
    <string name="note_flavor_enhancer">flavor enhancer</string>
    <string name="note_phosphate">phosphate</string>
    <string name="note_preservative">preservative</string>
    <string name="type_vegie">vegetarian</string>
    <string name="note_blackened">blackened </string>
    <string name="type_beef">beef</string>
    <string name="note_colorant">colorant</string>
    <string name="note_sulphur_treated">sulphur-treated</string>
    <string name="type_beefpig">Beef and pig</string>
    <string name="note_sweetening">sweetening</string>
    <string name="note_antioxidant">antioxidant</string>
    <string name="note_phenylalanine_source">phenylalanine source</string>
    <string name="note_waxed">waxed</string>
    <string name="type_fish">fish</string>
    <string name="contextmenu_share_with_friends">Share with friends</string>
    <string name="contextmenu_meals">Meals</string>
    <string name="contextmenu_vote">Rate your Meal</string>
    <string-array name="MensaLocations">
        <item>Mensa Stadtmitte</item>
        <item>Mensa Lichtwiese</item>
        <item>Mensa Schöfferstraße</item>
        <item>Bistro Haardtring</item>
        <item>Mensa Dieburg</item>
    </string-array>
    <string-array name="Themes">
        <item>Dark</item>
        <item>Light</item>
    </string-array>
    <string name="dialog_visual">Visual appearance</string>
    <string name="dialog_price">Value for money</string>
    <string name="dialog_taste">Taste</string>
    <string name="dialog_already_voted">You already rated: %s</string>
    <string name="meals_taste">T:</string>
    <string name="meals_price">P:</string>
    <string name="meals_visual">V:</string>
    <string name="dialog_vote_done">Your vote was submitted.</string>
    <string name="PREF_KEY_LAST_DIALOG_SHOWN">dlg_shown</string>
    <string name="help_dialog_msg">file:///android_asset/features.html</string>
    <string name="help_dialog_title">Feature Overview</string>
</resources>
