<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
<PreferenceCategory android:title="@string/pref_cat_mensa"><CheckBoxPreference android:summary="@string/pref_DeleteOldDataDescr" android:defaultValue="true" android:title="@string/pref_AutoUpdateLabel" android:key="@string/PREF_KEY_AUTO_UPDATE"></CheckBoxPreference>
<ListPreference android:dialogTitle="@string/pref_MensaLocationLabel" android:summary="@string/pref_MensaLocationSummary" android:entries="@array/MensaLocations" android:defaultValue="stadtmitte" android:entryValues="@array/MensaLocationsValues" android:title="@string/pref_MensaLocationLabel" android:key="@string/PREF_KEY_MENSA_LOCATION"></ListPreference>
</PreferenceCategory>
<PreferenceCategory android:title="@string/pref_cat_db"><CheckBoxPreference android:summary="@string/pref_DeleteOldDataDescr" android:defaultValue="true" android:title="@string/pref_DeleteOldDataLabel" android:key="@string/PREF_KEY_DELETE_OLD_DATA"></CheckBoxPreference>
</PreferenceCategory>
<PreferenceCategory android:title="@string/pref_cat_themes"><ListPreference android:dialogTitle="@string/pref_ThemesLabel" android:summary="@string/pref_ThemesSummary" android:entries="@array/Themes" android:defaultValue="dark" android:entryValues="@array/ThemesValues" android:title="@string/pref_ThemesLabel" android:key="@string/PREF_KEY_THEMES"></ListPreference>
</PreferenceCategory>
</PreferenceScreen>
